style: Update h1; correct align-self to center

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -47,7 +47,7 @@ h1 {
     font-weight: bold;
     margin: 0;
     padding: 0;
-    align-self: left;    
+    align-self: center;    
     text-align: left;
 }
 
